--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -8245,7 +8245,7 @@ TB</property>
 		      <child>
 			<widget class="GtkLabel" id="label247">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">&lt;span weight=&quot;heavy&quot; size=&quot;xx-large&quot; foreground=&quot;#FFF&quot;&gt;Finished creating a new virtual system&lt;/span&gt;</property>
+			  <property name="label" translatable="yes">&lt;span weight=&quot;heavy&quot; size=&quot;xx-large&quot; foreground=&quot;#FFF&quot;&gt;Ready to begin installation&lt;/span&gt;</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">True</property>
 			  <property name="justify">GTK_JUSTIFY_FILL</property>
@@ -8286,9 +8286,7 @@ TB</property>
 		  <child>
 		    <widget class="GtkLabel" id="create-congrats-label">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Congratulations, you have successfully created a new virtual system, &lt;b&gt;$SYSTEM_NAME&lt;/b&gt;.
-
-You'll now be able to view and work with $SYSTEM_NAME in the virtual machine manager.</property>
+		      <property name="label" translatable="yes">You are now ready to begin your installation of $SYSTEM_NAME.  Once installation is complete, you will be able to view and work with $SYSTEM_NAME in the virtual machine manager.</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
