--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -2836,7 +2836,7 @@ Jeremy Katz &lt;katzj@redhat.com&gt;
 		    <widget class="GtkTable" id="table3">
 		      <property name="border_width">3</property>
 		      <property name="visible">True</property>
-		      <property name="n_rows">3</property>
+		      <property name="n_rows">2</property>
 		      <property name="n_columns">3</property>
 		      <property name="homogeneous">False</property>
 		      <property name="row_spacing">3</property>
@@ -2872,7 +2872,6 @@ Jeremy Katz &lt;katzj@redhat.com&gt;
 
 		      <child>
 			<widget class="GtkLabel" id="label37">
-			  <property name="visible">True</property>
 			  <property name="label" translatable="yes">Maintain history of</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
@@ -6862,16 +6861,12 @@ TB</property>
 			      <property name="right_padding">0</property>
 
 			      <child>
-				<widget class="GtkEntry" id="pv-ks-url">
+				<widget class="GtkComboBoxEntry" id="pv-ks-url">
 				  <property name="visible">True</property>
-				  <property name="can_focus">True</property>
-				  <property name="editable">True</property>
-				  <property name="visibility">True</property>
-				  <property name="max_length">0</property>
-				  <property name="text" translatable="yes"></property>
+				  <property name="add_tearoffs">False</property>
 				  <property name="has_frame">True</property>
-				  <property name="invisible_char">•</property>
-				  <property name="activates_default">False</property>
+				  <property name="focus_on_click">True</property>
+				  <signal name="changed" handler="on_pv_ks_url_changed" last_modification_time="Wed, 11 Oct 2006 10:31:19 GMT"/>
 				</widget>
 			      </child>
 			    </widget>
@@ -6898,17 +6893,12 @@ TB</property>
 			      <property name="right_padding">0</property>
 
 			      <child>
-				<widget class="GtkEntry" id="pv-media-url">
+				<widget class="GtkComboBoxEntry" id="pv-media-url">
 				  <property name="visible">True</property>
-				  <property name="can_focus">True</property>
-				  <property name="has_focus">True</property>
-				  <property name="editable">True</property>
-				  <property name="visibility">True</property>
-				  <property name="max_length">0</property>
-				  <property name="text" translatable="yes"></property>
+				  <property name="add_tearoffs">False</property>
 				  <property name="has_frame">True</property>
-				  <property name="invisible_char">•</property>
-				  <property name="activates_default">False</property>
+				  <property name="focus_on_click">True</property>
+				  <signal name="changed" handler="on_pv_media_url_changed" last_modification_time="Wed, 11 Oct 2006 10:31:09 GMT"/>
 				</widget>
 			      </child>
 			    </widget>
