--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -8404,7 +8404,7 @@ TB</property>
 		  <property name="visible">True</property>
 		  <property name="xalign">0.10000000149</property>
 		  <property name="yalign">0.10000000149</property>
-		  <property name="xscale">0</property>
+		  <property name="xscale">1</property>
 		  <property name="yscale">0</property>
 		  <property name="top_padding">6</property>
 		  <property name="bottom_padding">6</property>
@@ -8722,7 +8722,6 @@ TB</property>
 				      <property name="right_attach">2</property>
 				      <property name="top_attach">0</property>
 				      <property name="bottom_attach">1</property>
-				      <property name="x_options">fill</property>
 				      <property name="y_options"></property>
 				    </packing>
 				  </child>
@@ -8750,7 +8749,6 @@ TB</property>
 				      <property name="right_attach">2</property>
 				      <property name="top_attach">1</property>
 				      <property name="bottom_attach">2</property>
-				      <property name="x_options">fill</property>
 				      <property name="y_options"></property>
 				    </packing>
 				  </child>
@@ -8768,7 +8766,7 @@ TB</property>
 				      <property name="yalign">0.5</property>
 				      <property name="xpad">0</property>
 				      <property name="ypad">0</property>
-				      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+				      <property name="ellipsize">PANGO_ELLIPSIZE_MIDDLE</property>
 				      <property name="width_chars">-1</property>
 				      <property name="single_line_mode">False</property>
 				      <property name="angle">0</property>
@@ -8778,7 +8776,6 @@ TB</property>
 				      <property name="right_attach">2</property>
 				      <property name="top_attach">2</property>
 				      <property name="bottom_attach">3</property>
-				      <property name="x_options">fill</property>
 				      <property name="y_options"></property>
 				    </packing>
 				  </child>
@@ -8796,7 +8793,7 @@ TB</property>
 				      <property name="yalign">0.5</property>
 				      <property name="xpad">0</property>
 				      <property name="ypad">0</property>
-				      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+				      <property name="ellipsize">PANGO_ELLIPSIZE_MIDDLE</property>
 				      <property name="width_chars">-1</property>
 				      <property name="single_line_mode">False</property>
 				      <property name="angle">0</property>
@@ -8806,7 +8803,6 @@ TB</property>
 				      <property name="right_attach">2</property>
 				      <property name="top_attach">3</property>
 				      <property name="bottom_attach">4</property>
-				      <property name="x_options">fill</property>
 				      <property name="y_options"></property>
 				    </packing>
 				  </child>
@@ -8824,7 +8820,7 @@ TB</property>
 				      <property name="yalign">0.5</property>
 				      <property name="xpad">0</property>
 				      <property name="ypad">0</property>
-				      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+				      <property name="ellipsize">PANGO_ELLIPSIZE_MIDDLE</property>
 				      <property name="width_chars">-1</property>
 				      <property name="single_line_mode">False</property>
 				      <property name="angle">0</property>
@@ -8834,7 +8830,6 @@ TB</property>
 				      <property name="right_attach">2</property>
 				      <property name="top_attach">4</property>
 				      <property name="bottom_attach">5</property>
-				      <property name="x_options">fill</property>
 				      <property name="y_options"></property>
 				    </packing>
 				  </child>
@@ -8862,7 +8857,6 @@ TB</property>
 				      <property name="right_attach">2</property>
 				      <property name="top_attach">5</property>
 				      <property name="bottom_attach">6</property>
-				      <property name="x_options">fill</property>
 				      <property name="y_options"></property>
 				    </packing>
 				  </child>
@@ -8890,7 +8884,6 @@ TB</property>
 				      <property name="right_attach">2</property>
 				      <property name="top_attach">6</property>
 				      <property name="bottom_attach">7</property>
-				      <property name="x_options">fill</property>
 				      <property name="y_options"></property>
 				    </packing>
 				  </child>
@@ -8918,7 +8911,6 @@ TB</property>
 				      <property name="right_attach">2</property>
 				      <property name="top_attach">7</property>
 				      <property name="bottom_attach">8</property>
-				      <property name="x_options">fill</property>
 				      <property name="y_options"></property>
 				    </packing>
 				  </child>
@@ -8946,7 +8938,6 @@ TB</property>
 				      <property name="right_attach">2</property>
 				      <property name="top_attach">8</property>
 				      <property name="bottom_attach">9</property>
-				      <property name="x_options">fill</property>
 				      <property name="y_options"></property>
 				    </packing>
 				  </child>
