--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -8004,7 +8004,7 @@ TB</property>
 		  <child>
 		    <widget class="GtkLabel" id="label279">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Physical host CPUs:</property>
+		      <property name="label" translatable="yes">Logical host CPUs:</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_RIGHT</property>
@@ -8225,7 +8225,7 @@ TB</property>
 			  <child>
 			    <widget class="GtkLabel" id="label280">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">&lt;small&gt;&lt;b&gt;Tip:&lt;/b&gt; For best performance, the number of virtual CPUs should be less than (or equal to) the number of physical CPUs on the host system.&lt;/small&gt;</property>
+			      <property name="label" translatable="yes">&lt;small&gt;&lt;b&gt;Tip:&lt;/b&gt; For best performance, the number of virtual CPUs should be less than (or equal to) the number of logical CPUs on the host system.&lt;/small&gt;</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">True</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
