Make URLs & email addrs in about dialog clickable (bz 210782)

--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -569,7 +569,7 @@ Inactive virtual machines</property>
 </property>
   <property name="wrap_license">False</property>
   <property name="website">http://virt-manager.et.redhat.com/</property>
-  <property name="website_label" translatable="yes"></property>
+  <property name="website_label" translatable="yes">http://virt-manager.et.redhat.com/</property>
   <property name="authors">Daniel P. Berrange &lt;berrange@redhat.com&gt;
 Hugh O. Brock &lt;hbrock@redhat.com&gt;
 Máirín Duffy &lt;duffy@redhat.com&gt;
